# velr

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml
rust/velr-cli/: Cargo.toml  LICENSE  README.md  build.rs  run-cov.sh
rust/velr-cli/data/: movies.cypher  simple.cypher
rust/velr-cli/include/: velr.h
rust/velr-cli/src/: main.rs
rust/velr-cli/src/runtime/: table.rs
rust/velr-cli/tests/: contract.rs
